# pbqp-papa

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
include/: CInterface.h
include/analysis/: PBQPHandler.hpp
include/debug/: DebugTimer.hpp  GraphVisualizer.hpp  StatKeeper.hpp
include/generate/: PBQPGenerator.hpp
include/graph/: DummySolution.hpp  Matrix.hpp  PBQPEdge.hpp  PBQPGraph.hpp  PBQPNode.hpp  PBQPSolution.hpp  Vector.hpp
include/io/: PBQP_Serializer.hpp  TypeSerializers.hpp
include/math/: BranchBoundSolver.hpp  GurobiConverter.hpp  InfinityWrapper.hpp
include/reduction/: ConnectedComponentSeparator.hpp  InfinityFilter.hpp  NodeMerger.hpp  PBQPReduction.hpp
include/reduction/degree/: DegreeOneReducer.hpp  DegreeTwoReducer.hpp  DegreeZeroReducer.hpp
include/reduction/heuristic/: DegreeNReductor.hpp
include/reduction/solutions/: DependentSolution.hpp  ImmediateSolution.hpp  NtoNDependentSolution.hpp  OnetoOneDependentSolution.hpp  TwoToOneDependentSolution.hpp
include/reduction/vectordegree/: VectorDegreeOneReducer.hpp  VectorDegreeZeroReducer.hpp
include/shell/: CheckSolvableCommand.hpp  Command.hpp  CommandHandler.hpp  DumpCommand.hpp  FullySolveCommand.hpp  InfoCommand.hpp  LoadCommand.hpp  StepBackwardCommand.hpp  StepForwardCommand.hpp  StopCommand.hpp  VisualizeCommand.hpp
include/solve/: BruteForceSolver.hpp  PBQPSolver.hpp  StepByStepSolver.hpp
include/util/: TestUtils.hpp
src/: CInterface.cpp  InfinityWrapper.cpp
src/debug/: DebugTimer.cpp  StatKeeper.cpp
src/io/: TypeSerializers.cpp
test/debug/: GraphVisualizerTests.cpp
test/graph/: GraphTests.cpp  MatrixTests.cpp  PBQPSolutionTests.cpp
test/math/: GurobiConverterTest.cpp  InfinityWrapperTests.cpp
test/reduction/: ConnectedComponentSeparatorTests.cpp  DegreeOneReducerTests.cpp  DegreeTwoReducerTests.cpp  DegreeZeroReducerTests.cpp  InfinityFilterTests.cpp
test/solve/: BruteForceSolverTests.cpp  StepByStepSolverTest.cpp
test/testData/: problematic.c
